Animations fixed - App now transitions between pages smoothly - Scrollbar disabled to prevent reflow - Font changed from 'Source Sans Pro' to 'Manrope' - Minor CSS changes - Removed unnecessary imports

--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,15 @@
-.App {
-  text-align: center;
+/* || Global styles */
+
+html::-webkit-scrollbar {
+    display: none;
+}
+
+html {
+    -ms-overflow-style: none;
+}
+
+div {
+    text-align: center;
 }
 
 /* || Navbar */
@@ -15,13 +25,9 @@
 }
 
 .navbar-default .navbar-nav>li>a {
-	color: #262626;
+	color: #a89494;
 	padding-top: 5px;
 	padding-bottom: 5px;
-}
-
-div {
-	text-align: center;
 }
 
 ul.topnav {
@@ -49,8 +55,8 @@ ul.topnav li.icon {
 }
 
 .button {
-	padding-top: 5px;
-	padding-bottom: 5px;
+	padding-top: 6px;
+	padding-bottom: 6px;
 	color: #262626;
 	border: 1px solid transparent;
 	transition-duration: 0.2s;
@@ -89,20 +95,6 @@ ul.topnav li.icon {
 	border-bottom: 2px solid #00db87;
 }
 
-@media screen and (max-width: 680px) {
-	.navbar {
-			margin-top: 10%;
-	}
-
-	div {
-		padding-left: 10px;
-		padding-right: 10px;
-	}
-	#introduction {
-		margin-top: 15%;
-	}
-}
-
 #logo {
 	width: auto;
 	height: auto;
@@ -111,9 +103,58 @@ ul.topnav li.icon {
 	float: left;
 }
 
+/* || Page styles */
+
+.page {
+    position: absolute;
+    top: 100px;
+    left: 0;
+    right: 0;
+}
+
+.page-title {
+	font-family: 'Manrope', sans-serif;
+    font-size: 280%;
+    font-weight: normal;
+}
+
+.card {
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+    transition: 0.3s;
+    border-radius: 5px;
+    background-color: #fefefe;
+    width: 60%;
+    display: inline-block;
+    font-size: 14px;
+    font-family: 'Manrope', sans-serif;
+}
+
+.card:hover {
+    box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2);
+}
+
+.card-img {
+    float: left;
+    width: 23%;
+    max-width: 150px;
+    border-radius: 5px 0 0 5px;
+}
+
+.card-content {
+    padding: 10px;
+}
+
+.card-title {
+    font-weight: bold;
+}
+
+.card-body {
+    font-weight: lighter;
+}
+
 #introduction {
 	color: #2d2d2d;
-	font-family: 'Source Sans Pro', serif;
+	font-family: 'Manrope', sans-serif;
 }
 
 p.intro-text {
@@ -121,7 +162,7 @@ p.intro-text {
 }
 
 p.intro-1 {
-	margin-top: 8%;
+	margin-top: 9%;
 	animation-delay: 0.8s;
 	font-weight: bolder;
 	font-size: 300%;
@@ -136,7 +177,7 @@ p.intro-2 {
 
 .intro-3 {
 	animation-delay: 3.1s;
-	font-size: 100%;
+	font-size: 120%;
 }
 
 .intro-3 a:hover, p.intro-3 a:active {
@@ -153,36 +194,6 @@ p.intro-2 {
 	padding-right: 5px;
 }
 
-.page-title {
-	font-family: 'Source Sans Pro', sans-serif;
-	font-size: 280%;
-}
-
-.card {
-    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
-    transition: 0.3s;
-    border-radius: 5px;
-    background-color: #fefefe;
-    width: 80%;
-    display: inline-block;
-}
-
-.card-img {
-    float: left;
-}
-
-.card-content {
-    padding: 10px;
-}
-
-.card-title {
-    font-weight: normal;
-}
-
-.card-body {
-    font-weight: lighter;
-}
-
 #project-1 {
 	animation-delay: 1.2s;
 }
@@ -195,13 +206,19 @@ p.intro-2 {
 	animation-delay: 3.2s;
 }
 
+/* || Animation styles*/
+
+.fade-appear,
 .fade-enter {
     opacity: 0;
+    z-index: 1;
 }
 
+.fade-appear-active,
 .fade-enter.fade-enter-active {
     opacity: 1;
-    transition: opacity 300ms ease-in;
+    transition: opacity 600ms linear 150ms;
+    animation: fadeInDown 0.5s;
 }
 
 .fade-exit {
@@ -210,5 +227,22 @@ p.intro-2 {
 
 .fade-exit.fade-exit-active {
     opacity: 0;
-    animation: fadeOutDown 0.3s;
+    transition: opacity 500ms linear 150ms;
+    animation: fadeOutDown 0.5s;
+}
+
+/* || Responsive styles */
+
+@media screen and (max-width: 680px) {
+    .navbar {
+        margin-top: 10%;
+    }
+
+    div {
+        padding-left: 10px;
+        padding-right: 10px;
+    }
+    #introduction {
+        margin-top: 15%;
+    }
 }
